kubernetes/deployment/training/rsc/ptx-edge-controller-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${CONTROLLER}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${CONTROLLER}
    env: ${ENV}
    tier: edge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ${CONTROLLER}
      env: ${ENV}
      tier: edge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${CONTROLLER}
        env: ${ENV}
        tier: edge
    spec:
      serviceAccountName: ${CONTROLLER}
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
      containers:
        - name: ${CONTROLLER}
          image: ${REGISTRY}:${REGISTRY_PORT}/${CONTROL_IMG}
          imagePullPolicy: IfNotPresent
          command: [ "kopf", "run", "--standalone", "--verbose",
                     "--namespace=${PTX}", "--liveness=http://0.0.0.0:8080/healthz",
                     "app/controller.py" ]
          ports:
            - name: api-port
              containerPort: ${CNTR_PORT}
              protocol: TCP
          livenessProbe:
            httpGet:
              port: ${CNTR_PORT}
              path: /${CNTR_LIVE_PATH}
            initialDelaySeconds: 30
            periodSeconds: 30
      restartPolicy: Always
---
