kubernetes/deployment/training/rsc/worker-data-processor-0-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DP0}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${DP0}
    env: ${ENV}
    tier: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${DP0}
      env: ${ENV}
      tier: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${DP0}
        env: ${ENV}
        tier: worker
    spec:
      serviceAccountName: ${BUILDER}
      schedulerName: ${PTX}-${SCHEDULER}
      containers:
        - name: worker
          #image: ${REGISTRY}:${REGISTRY_PORT}/worker/${DP0}:latest
          image: "${DP0_IMG}"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1000m
              memory: 3000Mi
          volumeMounts:
            - name: data-dir
              mountPath: /data
              readOnly: true
          ports:
            - name: port-mlflow
              containerPort: 5000
            - name: port-api
              containerPort: 8000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "${LAB_PZ}/${PZ_DATA_0}"
                    operator: In
                    values:
                      - "true"
                  - key: connector.dataspace.ptx.org/enabled
                    operator: In
                    values:
                      - "true"
      volumes:
        - name: data-dir
          emptyDir:
            sizeLimit: 100Mi
        - name: registry-ca
          configMap:
            name: registry-root-ca.crt
            items:
              - key: ca.crt
                path: registry_CA.crt
        - name: kube-api-client-cfg
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 3600
                  path: token
              - configMap:
                  items:
                    - key: ca.crt
                      path: ca.crt
                  name: kube-root-ca.crt
              - downwardAPI:
                  items:
                    - fieldRef:
                        apiVersion: v1
                        fieldPath: metadata.namespace
                      path: namespace
---
apiVersion: v1
kind: Service
metadata:
  name: ${DP0}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${DP0}
    env: ${ENV}
    tier: worker
spec:
  selector:
    app.kubernetes.io/name: ${DP0}
    env: ${ENV}
    tier: worker
  type: ClusterIP
  ports:
    - name: port-mlflow
      port: 5000
      targetPort: port-mlflow
    - name: port-api
      port: 8000
      targetPort: port-api
---
apiVersion: v1
kind: Service
metadata:
  name: ${BUILDER}-${DP0}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${DP0}
    env: ${ENV}
    tier: worker
spec:
  selector:
    app.kubernetes.io/name: ${DP0}
    env: ${ENV}
    tier: worker
  type: ClusterIP
  ports:
    - name: webhook-port
      protocol: TCP
      port: 9999
      targetPort: 9999
  publishNotReadyAddresses: true
---
