kubernetes/deployment/training/rsc/ptx-edge-restapi-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${REST_API}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${REST_API}
    env: ${ENV}
    tier: edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${REST_API}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${REST_API}
        env: ${ENV}
        tier: edge
    spec:
      serviceAccountName: ${REST_API}
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"
      containers:
        - name: rest-api
          image: ${REGISTRY}:${REGISTRY_PORT}/${API_IMG}
          imagePullPolicy: IfNotPresent
          command: [ "uvicorn", "app.main:app", "--host=0.0.0.0", "--port=${API_PORT}", "--workers=2",
                     "--proxy-headers", "--forwarded-allow-ips='*'", "--access-log", "--log-level=debug" ]
          ports:
            - name: api-port
              containerPort: ${API_PORT}
              protocol: TCP
          resources:
            requests:
              cpu: 300m
              memory: 150Mi
          livenessProbe:
            httpGet:
              port: ${API_PORT}
              path: /${PREFIX}/health
            initialDelaySeconds: 30
            periodSeconds: 30
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ${REST_API}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${REST_API}
    env: ${ENV}
    tier: edge
spec:
  selector:
    app.kubernetes.io/name: ${REST_API}
  type: ClusterIP
  ports:
    - name: api-port
      port: ${API_PORT}
      targetPort: api-port
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-basic-auth
  namespace: ${PTX}
spec:
  basicAuth:
    secret: api-basic-auth
    realm: ${PTX}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-secure-headers
  namespace: ${PTX}
spec:
  headers:
    frameDeny: true
    customFrameOptionsValue: SAMEORIGIN
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${REST_API}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${REST_API}
    env: ${ENV}
    tier: edge
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: ${PTX}-api-basic-auth@kubernetescrd,${PTX}-api-secure-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /${PREFIX}
            pathType: Prefix
            backend:
              service:
                name: ${REST_API}
                port:
                  name: api-port
---
