kubernetes/deployment/training/rsc/ptx-pdc-daemon.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ${PDC}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: ${ENV}
    tier: ptx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ${PDC}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${PDC}
        env: ${ENV}
        tier: ptx
    spec:
      nodeSelector:
        connector.dataspace.ptx.org/enabled: "true"
      serviceAccountName: ${PDC}
      containers:
        - name: connector
          image: ${REGISTRY}:${REGISTRY_PORT}/${PDC_IMG}
          imagePullPolicy: IfNotPresent
          ports:
            - name: pdc-port
              containerPort: ${PDC_PORT}
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 250Mi
          volumeMounts:
            - name: env-template
              mountPath: "/usr/src/app/.env.tmp"
              subPath: .env.tmp
              readOnly: true
            - name: config-template
              mountPath: "/usr/src/app/dist/src/config.json.tmp"
              subPath: config.json.tmp
              readOnly: true
      volumes:
        - name: env-template
          configMap:
            name: ${PDC}-config
            items:
              - key: .env
                path: .env.tmp
        - name: config-template
          configMap:
            name: ${PDC}-config
            items:
              - key: ${USED_PDC_CONFIG}
                path: config.json.tmp
        - name: kube-api-client-cfg
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  expirationSeconds: 3607
                  path: token
              - configMap:
                  items:
                    - key: ca.crt
                      path: ca.crt
                  name: kube-root-ca.crt
              - downwardAPI:
                  items:
                    - fieldRef:
                        apiVersion: v1
                        fieldPath: metadata.namespace
                      path: namespace
---
apiVersion: v1
kind: Service
metadata:
  name: ${PDC}-${PZ_DATA_0}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: ${ENV}
    tier: ptx
spec:
  selector:
    app.kubernetes.io/name: ${PDC}
    privacy-zone.dataspace.ptx.org/default: ${PZ_DATA_0}
  type: ClusterIP
  ports:
    - name: pdc-port
      port: ${PDC_PORT}
      targetPort: pdc-port
---
apiVersion: v1
kind: Service
metadata:
  name: ${PDC}-${PZ_DATA_1}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: ${ENV}
    tier: ptx
spec:
  selector:
    app.kubernetes.io/name: ${PDC}
    privacy-zone.dataspace.ptx.org/default: ${PZ_DATA_1}
  type: ClusterIP
  ports:
    - name: pdc-port
      port: ${PDC_PORT}
      targetPort: pdc-port
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ${PDC}-${PZ_DATA_0}-stripprefix
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: ${ENV}
    tier: ptx
spec:
  stripPrefix:
    prefixes:
      - /${PDC_PREFIX_DATA_0}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ${PDC}-${PZ_DATA_1}-stripprefix
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: ${ENV}
    tier: ptx
spec:
  stripPrefix:
    prefixes:
      - /${PDC_PREFIX_DATA_1}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${PDC}-${PZ_DATA_0}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: ${ENV}
    tier: ptx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ${PTX}-${PDC}-${PZ_DATA_0}-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /${PDC_PREFIX_DATA_0}
            pathType: Prefix
            backend:
              service:
                name: ${PDC}-${PZ_DATA_0}
                port:
                  name: pdc-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${PDC}-${PZ_DATA_1}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${PDC}
    env: ${ENV}
    tier: ptx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ${PTX}-${PDC}-${PZ_DATA_1}-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /${PDC_PREFIX_DATA_1}
            pathType: Prefix
            backend:
              service:
                name: ${PDC}-${PZ_DATA_1}
                port:
                  name: pdc-port
---
