kubernetes/deployment/training/rsc/worker-aggregator-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${AGG}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${AGG}
    env: ${ENV}
    tier: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${AGG}
      env: ${ENV}
      tier: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${AGG}
        env: ${ENV}
        tier: worker
    spec:
      containers:
        - name: worker
          #image: ${REGISTRY}:${REGISTRY_PORT}/worker/${AGG}:latest
          image: "${AGG_IMG}"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 3000Mi
          ports:
            - name: port-mlflow
              containerPort: 5000
            - name: port-api
              containerPort: 8000
      restartPolicy: Never
      schedulerName: ${PTX}-${SCHEDULER}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "${LAB_PZ}/${PZ_FED}"
                    operator: In
                    values:
                      - "true"
      volumes:
        - name: registry-ca
          configMap:
            name: registry-root-ca.crt
            items:
              - key: ca.crt
                path: registry_CA.crt
---
apiVersion: v1
kind: Service
metadata:
  name: ${AGG}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${AGG}
    env: ${ENV}
    tier: worker
spec:
  selector:
    app.kubernetes.io/name: ${AGG}
    env: ${ENV}
    tier: worker
  type: ClusterIP
  ports:
    - name: port-mlflow
      port: 5000
      targetPort: port-mlflow
    - name: port-api
      port: 8000
      targetPort: port-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${AGG}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${AGG}
    env: ${ENV}
    tier: worker
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ${PTX}-api-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /worker/${AGG}
            pathType: Prefix
            backend:
              service:
                name: ${AGG}
                port:
                  name: port-mlflow
---
#apiVersion: traefik.io/v1alpha1
#kind: Middleware
#metadata:
#  name: ${AGG}-stripprefix
#  namespace: ${PTX}
#  labels:
#    app.kubernetes.io/name: ${AGG}
#    env: ${ENV}
#    tier: worker
#spec:
#  stripPrefix:
#    prefixes:
#      - /worker/${AGG}
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ${AGG}-mlflow-api
#  namespace: ${PTX}
#  labels:
#    app.kubernetes.io/name: ${AGG}
#    env: ${ENV}
#    tier: worker
#  annotations:
#    traefik.ingress.kubernetes.io/router.entrypoints: websecure
#    traefik.ingress.kubernetes.io/router.tls: "true"
#    traefik.ingress.kubernetes.io/router.middlewares: ${PTX}-${AGG}-stripprefix@kubernetescrd
#spec:
#  ingressClassName: traefik
#  rules:
#    - http:
#        paths:
#          - path: /worker/${AGG}/${MLFLOW_API_PREFIX}
#            pathType: Prefix
#            backend:
#              service:
#                name: ${AGG}
#                port:
#                  name: port-mlflow
#---
