kubernetes/deployment/training/rsc/worker-orchestrator-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${ORCH}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${ORCH}
    env: ${ENV}
    tier: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${ORCH}
      env: ${ENV}
      tier: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${ORCH}
        env: ${ENV}
        tier: worker
    spec:
      containers:
        - name: worker
          #image: ${REGISTRY}:${REGISTRY_PORT}/worker/${ORCH}:latest
          image: "${ORCH_IMG}"
          imagePullPolicy: Always
          #command:
          #  - "fastapi"
          #  - "run"
          #  - "orchestrator.py"
          #  - "--host=0.0.0.0"
          #  - "--port=8000"
          #  - "--proxy-headers"
          #  - "--forwarded-allow-ips='*'"
          #  - "--root-path=/worker/orchestrator"
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
          ports:
            - name: port-api
              containerPort: 8000
      restartPolicy: Never
      schedulerName: ${PTX}-${SCHEDULER}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: "${LAB_PZ}/${PZ_FED}"
                    operator: In
                    values:
                      - "true"
      volumes:
        - name: registry-ca
          configMap:
            name: registry-root-ca.crt
            items:
              - key: ca.crt
                path: registry_CA.crt
---
apiVersion: v1
kind: Service
metadata:
  name: ${ORCH}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${ORCH}
    env: ${ENV}
    tier: worker
spec:
  selector:
    app.kubernetes.io/name: ${ORCH}
    env: ${ENV}
    tier: worker
  type: ClusterIP
  ports:
    - name: port-api
      port: 8000
      targetPort: port-api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ${ORCH}-stripprefix
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${ORCH}
    env: ${ENV}
    tier: worker
spec:
  stripPrefix:
    prefixes:
      - /worker/${ORCH}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${ORCH}
  namespace: ${PTX}
  labels:
    app.kubernetes.io/name: ${ORCH}
    env: ${ENV}
    tier: worker
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: ${PTX}-api-basic-auth@kubernetescrd,${PTX}-${ORCH}-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /worker/${ORCH}
            pathType: Prefix
            backend:
              service:
                name: ${ORCH}
                port:
                  name: port-api
---
